--- a/public/index.html
+++ b/public/index.html
@@ -415,7 +415,7 @@
                         <h2>Retelistica</h2>
                         <hr class="star-primary">
                         <img src="img/portfolio/Retelistica.jpg" class="img-responsive img-centered" alt="">
-                        <p>Configurari Echipamente Retelistics</p>
+                        <p>Configurari Echipamente Retelistica</p>
                         <ul class="list-inline item-details">
 
 
